--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-compression = { version = "0.3.8", features = ["tokio", "deflate"]}
+async-compression = { version = "0.3.8", features = ["tokio", "deflate", "bzip2", "lzma", "zstd", "xz"]}
 tokio = { version = "1.4.0", features = ["full"] }
