Addition of Cargo fields for crates.io publishing & updates to README

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "async_zip"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2018"
+authors = ["Harry [hello@majored.pw]"]
+repository = "https://github.com/Majored/rs-async-zip"
+description = "An asynchronous ZIP archive reading/writing crate with a heavy focus on streaming support."
+readme = "README.md"
+license = "MIT"
+license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
