--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,25 @@
 [package]
 name = "async_zip"
-version = "0.0.2"
+version = "0.0.3"
 edition = "2018"
 authors = ["Harry [hello@majored.pw]"]
 repository = "https://github.com/Majored/rs-async-zip"
 description = "An asynchronous ZIP archive reading/writing crate with a heavy focus on streaming support."
 readme = "README.md"
 license = "MIT"
-license-file = "LICENSE"
+documentation = "https://docs.rs/async_zip/"
+homepage = "https://github.com/Majored/rs-async-zip"
+keywords = ["async", "zip", "archive", "tokio"]
+categories = ["asynchronous", "compression"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 async-compression = { version = "0.3.8", features = ["tokio", "deflate", "bzip2", "lzma", "zstd", "xz"]}
-tokio = { version = "1.4.0", features = ["full"] }
+tokio = { version = "1.12.0", features = ["io-util", "fs"] }
 chrono = "0.4.19"
 crc32fast = "1.2.1"
+
+[dev-dependencies]
+tokio = { version = "1.12.0", features = ["full"] }
+async-compression = { version = "0.3.8", features = ["all"]}
