--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ homepage = "https://github.com/Majored/rs-async-zip"
 keywords = ["async", "zip", "archive", "tokio"]
 categories = ["asynchronous", "compression"]
 
+[lib]
+doctest = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
