--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ async-compression = { version = "0.3.8", features = ["tokio", "deflate", "bzip2"
 tokio = { version = "1.12.0", features = ["io-util", "fs"] }
 chrono = "0.4.19"
 crc32fast = "1.2.1"
+thiserror = "1"
 
 [dev-dependencies]
 tokio = { version = "1.12.0", features = ["full"] }
