--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ categories = ["asynchronous", "compression"]
 
 [dependencies]
 async-compression = { version = "0.3.8", features = ["tokio", "deflate", "bzip2", "lzma", "zstd", "xz"]}
+async_io_utilities = "0.1.1"
 tokio = { version = "1.12.0", features = ["io-util", "fs"] }
 chrono = "0.4.19"
 crc32fast = "1.2.1"
