--- a/examples/actix_multipart/Cargo.toml
+++ b/examples/actix_multipart/Cargo.toml
@@ -11,6 +11,7 @@ actix-multipart = "0.4.0-beta.13"
 sanitize-filename = "0.3.0"
 futures = "0.3.19"
 anyhow = "1.0.53"
+derive_more = "0.99.17"
 
 [dependencies.uuid]
 version = "0.8.2"
