--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,4 +31,5 @@ crc32fast = "1.3.2"
 thiserror = "1.0.37"
 
 [dev-dependencies]
+sanitize-filename = "0.4.0"
 tokio = { version = "1.21.2", features = ["full"] }
