--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.9"
 edition = "2021"
 authors = ["Harry [hello@majored.pw]"]
 repository = "https://github.com/Majored/rs-async-zip"
-description = "An asynchronous ZIP archive reading/writing crate with a heavy focus on streaming support."
+description = "An asynchronous ZIP archive reading/writing crate."
 readme = "README.md"
 license = "MIT"
 documentation = "https://docs.rs/async_zip/"
@@ -12,9 +12,12 @@ homepage = "https://github.com/Majored/rs-async-zip"
 keywords = ["async", "zip", "archive", "tokio"]
 categories = ["asynchronous", "compression"]
 
-
 [features]
-default = ["deflate", "bzip2", "lzma", "zstd", "xz"]
+full = ["date", "fs", "crc", "deflate", "bzip2", "lzma", "zstd", "xz"]
+
+date = []
+fs = []
+crc = []
 
 deflate = ["async-compression/deflate"]
 bzip2 = ["async-compression/bzip2"]
@@ -23,12 +26,14 @@ zstd = ["async-compression/zstd"]
 xz = ["async-compression/xz"]
 
 [dependencies]
-async-compression = { version = "0.3.15", default-features = false, features = ["tokio"] }
-async_io_utilities = { git = "https://github.com/Majored/rs-async-io-utilities" }
-tokio = { version = "1.21.2", features = ["io-util", "fs"] }
-chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 crc32fast = "1.3.2"
 thiserror = "1.0.37"
+tokio = { version = "1.21.2", features = ["io-util", "fs"] }
+
+async-compression = { version = "0.3.15", default-features = false, features = ["tokio"], optional = true }
+chrono = { version = "0.4.22", default-features = false, features = ["clock"], optional = true}
+
+async_io_utilities = { git = "https://github.com/Majored/rs-async-io-utilities" }
 
 [dev-dependencies]
 sanitize-filename = "0.4.0"
