--- a/.github/workflows/ci-source.yml
+++ b/.github/workflows/ci-source.yml
@@ -16,7 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Build
+      run: cargo build --verbose --all-features
     - name: Run rustfmt
-      run: cargo fmt
+      run: cargo fmt --check
     - name: Run clippy
-      run: cargo clippy
+      run: cargo clippy --all-features -- -D clippy::all
