fix: add chrono to the date feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["asynchronous", "compression"]
 [features]
 full = ["date", "fs", "crc", "deflate", "bzip2", "lzma", "zstd", "xz"]
 
-date = []
+date = ["chrono"]
 fs = []
 crc = []
 
