--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ xz = ["async-compression/xz"]
 crc32fast = "1.3.2"
 thiserror = "1.0.37"
 tokio = { version = "1.21.2", features = ["io-util", "fs"] }
+pin-project = "1.0.12"
 
 async-compression = { version = "0.3.15", default-features = false, features = ["tokio"], optional = true }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"], optional = true}
