`cargo-all-features` skip optional dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,6 @@ actix-multipart = "0.4"
 futures = "0.3"
 derive_more = "0.99"
 uuid = { version = "1", features = ["v4", "serde"] } 
+
+[package.metadata.cargo-all-features]
+skip_optional_dependencies = true
