--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -16,9 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Install 'cargo-all-features' helper
-      run: cargo install cargo-all-features
-    - name: Build with all combinations of feature flags
-      run: cargo build-all-features --verbose
-    - name: Test with all combinations of feature flags
-      run: cargo test-all-features --verbose
+    - name: Build
+      run: cargo build --verbose --all-features
+    - name: Test
+      run: cargo test--verbose --all-features
