--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ tokio = { version = "1", features = ["full"] }
 anyhow = "1"
 sanitize-filename = "0.4"
 
-# actix_mutlipart
+# actix_multipart
 actix-web = "4"
 actix-multipart = "0.4"
 futures = "0.3"
