--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,13 @@ keywords = ["async", "zip", "archive", "tokio"]
 categories = ["asynchronous", "compression"]
 
 [features]
-full = ["chrono", "fs", "deflate", "bzip2", "lzma", "zstd", "xz"]
+full = ["chrono", "tokio-fs", "deflate", "bzip2", "lzma", "zstd", "xz"]
 
 # All features that are compatible with WASM
 full-wasm = ["chrono", "deflate", "zstd"]
 
-fs = ["tokio", "tokio-util"]
+tokio = ["tokio-util"]
+tokio-fs = ["tokio/fs"]
 
 deflate = ["async-compression/deflate"]
 bzip2 = ["async-compression/bzip2"]
@@ -38,7 +39,7 @@ thiserror = "1"
 
 async-compression = { version = "0.3", default-features = false, features = ["futures-io"], optional = true }
 chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
-tokio = { version = "1", default-features = false, features = ["fs"], optional = true }
+tokio = { version = "1", default-features = false, optional = true }
 tokio-util = { version = "0.7", features = ["compat"], optional = true }
 
 [dev-dependencies]
