Document features on docs.rs
It will show on docs.rs which features are required for the
function/type to be available.

Signed-off-by: Jiahao XU <Jiahao_XU@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ xz = ["async-compression/xz"]
 
 [package.metadata.docs.rs]
 all-features = true
+# defines the configuration attribute `docsrs`
+rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 crc32fast = "1"
